--- a/SCFP_EDA.ipynb
+++ b/SCFP_EDA.ipynb
@@ -1304,7 +1304,7 @@
     "\n",
     "1. Buying a single company’s stock is safer than stock mutual fund. (True/False) [__ANSWER: FALSE__]\n",
     "\n",
-    "2. How much in a savings account with $100 after 5 years at 2% interest rate? (More than $102/Exactly $102/Less than $102) [__ANSWER: MORE__]\n",
+    "2. How much in a savings account with 100 dollars after 5 years at 2 percent interest rate? (More than 102/Exactly 102/Less than 102) [__ANSWER: MORE__]\n",
     "\n",
     "3. Imagine that the interest rate on your savings account was 1 percent per year and inflation was 2 percent per year. <br>\n",
     "    After one year, would you be able to buy: (More than today/Same as today/Less than today) [__ANSWER: LESS__] <br>\n",
